[metadata]
name = ohmassay
version = 0.1
author = Kazys Stepanas
author_email = kazys.stepanas@csiro.au
classifiers =
  Programming Language :: Python :: 3
  License :: BSD
  Operating System :: OS Independent
license = BSD
description = Ohm timing and comparision package
long_description = file: README.md
long_description_content_type = test/markdown

[options]
# install_requires = 
# setup_requires = 
packages = find:

[options.entry_points]
console_scripts =
    ohmassay_offline=ohmassay.offline:main
    ohmassay_parse_offline=ohmassay.parse_offline:main
    ohmassay_parse_tegrastats=ohmassay.parse_tegrastats:main

[pep8]
max-line-length = 120

[flake8]
max-line-length = 120
import-order-style = google
