<?xml version="1.0"?>
<package format="2">
  <name>ohmassay_launch</name>
  <version>0.0.0</version>
  <description>A package containing launch files for ohmassay invocations.</description>

  <maintainer email="kazys.stepanas@csiro.au">Kazys Stepanas</maintainer>


  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python-requests</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_sensor_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
